--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.9.1",
   "description": "JS training tasks",
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "test-debug": "./node_modules/.bin/mocha --debug-brk"
+    "test": "node_modules\\.bin\\mocha",
+    "test-debug": "node_modules\\.bin\\mocha --debug-brk"
   },
   "author": "aorgish",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^2.3.4"
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.7",
+    "mocha": "^2.5.3"
   },
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/rolling-scopes-school/js-assignments.git"
+ 
+  "dependencies": {
+    "chai": "^4.3.6"
   }
 }
